fixed mobile spacing up a bit

--- a/material/supporting/template.css
+++ b/material/supporting/template.css
@@ -64,7 +64,8 @@
 
     .content {
         width: 95%;
-        display: block;
+        display: flex;
+        flex-direction: column-reverse;
     }
 
     .content h1 {
@@ -83,7 +84,7 @@
     }
 
     .home-image {
-        margin: 50px 0;
+        margin: 0px 0;
     }
 }
 
@@ -133,7 +134,6 @@
     .content-img {
         max-width: 350px;
         margin-left: auto;
-        margin: 15px 0;
     }
 
     .home-text {
@@ -163,7 +163,7 @@ a {
     color: var(--foreground);
 }
 
-button:hover, a:hover {
+body.nontouch button:hover, a:hover {
     color: grey;
     transition: all 0.3s;
 }
@@ -330,6 +330,7 @@ button + button {
 
     display: inline-block;
     transition: all 0.5s;
+    margin: 15px 0;
 }
 
 .home-text {
